Fix: api 500 responses (#12)
* Fix api response;

* Make api docs; Tagalign fix;

* 0x is opt value in reg exp; Few fixes;

* Test fixes;
