# cmd/api/docs/swagger.yaml
@@ -365,6 +365,7 @@ definitions:
         - create
         - create2
         - selfdestruct
+        - reward
         example: call
         type: string
     type: object
@@ -483,7 +484,7 @@ info:
   title: Noble Indexer API
   version: "1.0"
 paths:
-  /address:
+  /addresses:
     get:
       description: List address info
       operationId: list-address
@@ -537,7 +538,7 @@ paths:
       summary: List address info
       tags:
       - address
-  /address/{hash}:
+  /addresses/{hash}:
     get:
       description: Get address info
       operationId: get-address
@@ -569,7 +570,7 @@ paths:
       summary: Get address info
       tags:
       - address
-  /block:
+  /blocks:
     get:
       description: List blocks info
       operationId: list-block
@@ -616,7 +617,7 @@ paths:
       summary: List blocks info
       tags:
       - block
-  /block/{height}:
+  /blocks/{height}:
     get:
       description: Get block info
       operationId: get-block
@@ -651,7 +652,7 @@ paths:
       summary: Get block info
       tags:
       - block
-  /block/{height}/stats:
+  /blocks/{height}/stats:
     get:
       description: Get block stats by height
       operationId: get-block-stats
@@ -680,7 +681,7 @@ paths:
       summary: Get block stats by height
       tags:
       - block
-  /block/{height}/transactions:
+  /blocks/{height}/transactions:
     get:
       description: List block transactions
       operationId: list-block-transactions
@@ -729,7 +730,7 @@ paths:
       summary: List block transactions
       tags:
       - block
-  /block/count:
+  /blocks/count:
     get:
       description: Get count of blocks in network
       operationId: get-blocks-count
@@ -747,7 +748,7 @@ paths:
       summary: Get count of blocks in network
       tags:
       - block
-  /contract:
+  /contracts:
     get:
       description: List contract info
       operationId: list-contract
@@ -805,7 +806,7 @@ paths:
       summary: List contract info
       tags:
       - contract
-  /contract/{hash}:
+  /contracts/{hash}:
     get:
       description: Get contract info
       operationId: get-contract
@@ -837,7 +838,7 @@ paths:
       summary: Get contract info
       tags:
       - contract
-  /contract/{hash}/sources:
+  /contracts/{hash}/sources:
     get:
       description: Get contract sources
       operationId: get-contract-sources
@@ -916,7 +917,7 @@ paths:
       summary: Get current indexer head
       tags:
       - general
-  /log:
+  /logs:
     get:
       description: List logs
       operationId: list-transaction-log
@@ -976,7 +977,7 @@ paths:
       summary: List logs
       tags:
       - transactions
-  /proxy-contracts:
+  /proxy:
     get:
       description: List of all indexed proxy contracts
       operationId: list-proxy-contracts
@@ -1081,7 +1082,245 @@ paths:
       summary: Search by hash
       tags:
       - search
-  /token:
+  /token_balances:
+    get:
+      description: List token balances
+      operationId: list-token-balances
+      parameters:
+      - description: Count of requested entities
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        minimum: 0
+        name: offset
+        type: integer
+      - description: 'Sort order. Default: desc'
+        enum:
+        - asc
+        - desc
+        in: query
+        name: sort
+        type: string
+      - description: Address
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: address
+        type: string
+      - description: Contract address
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: contract
+        type: string
+      - description: Token ID
+        in: query
+        name: token_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.TokenBalance'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: List token balances
+      tags:
+      - token
+  /tokens:
+    get:
+      description: List tokens
+      operationId: list-tokens
+      parameters:
+      - description: Contract address which issued the token
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: contract
+        type: string
+      - description: Count of requested entities
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        minimum: 0
+        name: offset
+        type: integer
+      - description: Comma-separated list of token types
+        enum:
+        - ERC20
+        - ERC721
+        - ERC1155
+        in: query
+        name: type
+        type: string
+      - description: 'Sort order. Default: desc'
+        enum:
+        - asc
+        - desc
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.Token'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: List tokens
+      tags:
+      - token
+  /tokens/{contract}/{token_id}:
+    get:
+      description: Get token info
+      operationId: get-token
+      parameters:
+      - description: Contract address
+        in: path
+        maxLength: 42
+        minLength: 42
+        name: contract
+        required: true
+        type: string
+      - description: Token ID
+        in: path
+        name: token_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Token'
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: Get token info
+      tags:
+      - token
+  /traces:
+    get:
+      description: List transaction traces
+      operationId: list-transaction-traces
+      parameters:
+      - description: Transaction hash in hexadecimal with 0x prefix
+        in: query
+        maxLength: 66
+        minLength: 66
+        name: tx_hash
+        type: string
+      - description: Count of requested entities
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        minimum: 0
+        name: offset
+        type: integer
+      - description: Address which initiate trace
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: address_from
+        type: string
+      - description: Address which receiving trace result
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: address_to
+        type: string
+      - description: Called contract
+        in: query
+        maxLength: 42
+        minLength: 42
+        name: contract
+        type: string
+      - description: Block height
+        in: query
+        minimum: 1
+        name: height
+        type: integer
+      - description: Comma-separated list of trace types
+        enum:
+        - call
+        - delegatecall
+        - staticcall
+        - create
+        - create2
+        - selfdestruct
+        - reward
+        - suicide
+        in: query
+        name: type
+        type: string
+      - description: 'Sort order. Default: desc'
+        enum:
+        - asc
+        - desc
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.Trace'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: List transaction traces
+      tags:
+      - transactions
+  /transfers:
     get:
       description: List token transfers
       operationId: list-token-transfers
@@ -1174,188 +1413,7 @@ paths:
       summary: List token transfers
       tags:
       - token
-  /token/{contract}/{token_id}:
-    get:
-      description: Get token info
-      operationId: get-token
-      parameters:
-      - description: Contract address
-        in: path
-        maxLength: 42
-        minLength: 42
-        name: contract
-        required: true
-        type: string
-      - description: Token ID
-        in: path
-        name: token_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/responses.Token'
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.Error'
-      summary: Get token info
-      tags:
-      - token
-  /token_balance:
-    get:
-      description: List token balances
-      operationId: list-token-balances
-      parameters:
-      - description: Count of requested entities
-        in: query
-        maximum: 100
-        minimum: 1
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        minimum: 0
-        name: offset
-        type: integer
-      - description: 'Sort order. Default: desc'
-        enum:
-        - asc
-        - desc
-        in: query
-        name: sort
-        type: string
-      - description: Address
-        in: query
-        maxLength: 42
-        minLength: 42
-        name: address
-        type: string
-      - description: Contract address
-        in: query
-        maxLength: 42
-        minLength: 42
-        name: contract
-        type: string
-      - description: Token ID
-        in: query
-        name: token_id
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/responses.TokenBalance'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.Error'
-      summary: List token balances
-      tags:
-      - token
-  /traces:
-    get:
-      description: List transaction traces
-      operationId: list-transaction-traces
-      parameters:
-      - description: Transaction hash in hexadecimal with 0x prefix
-        in: query
-        maxLength: 66
-        minLength: 66
-        name: tx_hash
-        type: string
-      - description: Count of requested entities
-        in: query
-        maximum: 100
-        minimum: 1
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        minimum: 0
-        name: offset
-        type: integer
-      - description: Address which initiate trace
-        in: query
-        maxLength: 42
-        minLength: 42
-        name: address_from
-        type: string
-      - description: Address which receiving trace result
-        in: query
-        maxLength: 42
-        minLength: 42
-        name: address_to
-        type: string
-      - description: Called contract
-        in: query
-        maxLength: 42
-        minLength: 42
-        name: contract
-        type: string
-      - description: Block height
-        in: query
-        minimum: 1
-        name: height
-        type: integer
-      - description: Comma-separated list of trace types
-        enum:
-        - call
-        - delegatecall
-        - staticcall
-        - create
-        - create2
-        - selfdestruct
-        - reward
-        - suicide
-        in: query
-        name: type
-        type: string
-      - description: 'Sort order. Default: desc'
-        enum:
-        - asc
-        - desc
-        in: query
-        name: sort
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/responses.Trace'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.Error'
-      summary: List transaction traces
-      tags:
-      - transactions
-  /transfer/{id}:
+  /transfers/{id}:
     get:
       description: Get token transfer info
       operationId: get-token-transfer
@@ -1385,7 +1443,7 @@ paths:
       summary: Get token transfer info
       tags:
       - token
-  /tx:
+  /txs:
     get:
       description: List all of indexed transactions
       operationId: list-transactions
@@ -1468,7 +1526,7 @@ paths:
       summary: Transactions list
       tags:
       - transactions
-  /tx/{hash}:
+  /txs/{hash}:
     get:
       description: Get transaction by hash
       operationId: get-transaction
@@ -1501,6 +1559,6 @@ paths:
       tags:
       - transactions
 schemes:
-- http
 - https
+- http
 swagger: "2.0"
